# ChangeLog for net-fs/samba
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.191 2005/08/05 14:07:24 seemant Exp $

  05 Aug 2005; Seemant Kulleen <seemant@gentoo.org>
  -samba-3.0.14a-r3.ebuild:
  removing -r3 -- the clamav thing was a bad idea.  See the aforementioned bug

*samba-3.0.14a-r3 (04 Aug 2005)

  04 Aug 2005; Seemant Kulleen <seemant@gentoo.org>
  +samba-3.0.14a-r3.ebuild:
  Add dependency on clamav with the 'clamav' and/or 'libclamav' USE flags. The
  libclamav flag will *go away* soon. Additionally, make sure that
  /use/lib/samba/{auth,idmap,rpc} stay around. Fixed bug #100766 with the
  clamav/libclamav thing

  04 Aug 2005; Seemant Kulleen <seemant@gentoo.org> -samba-3.0.11.ebuild,
  -samba-3.0.14a-r1.ebuild:
  since I moved 14a-r2 to stable x86 finally, we can now remove some of the
  cruft versions

  03 Aug 2005; Seemant Kulleen <seemant@gentoo.org> samba-3.0.14a-r2.ebuild:
  only install smb.conf (blank) if none is currently present in the live
  filesystem

  03 Aug 2005; Seemant Kulleen <seemant@gentoo.org> samba-3.0.14a-r2.ebuild:
  do not install a blank smb.conf.  Fixes bug #70686

  01 Aug 2005; Joseph Jezak <josejx@gentoo.org> samba-3.0.14a-r2.ebuild:
  Marked ppc stable for bug #95327.

  28 Jul 2005; Guy Martin <gmsoft@gentoo.org> samba-3.0.14a-r2.ebuild:
  Stable on hppa.

  27 Jul 2005; Herbie Hopkins <herbs@gentoo.org> samba-3.0.14a-r2.ebuild:
  Stable on amd64 wrt bug #95327.

  27 Jul 2005; Christian Andreetta <satya@gentoo.org> files/samba.pam:
  pam library location fix in /etc/pam.d/samba

  26 Jul 2005; Markus Rothe <corsair@gentoo.org> samba-3.0.14a-r2.ebuild:
  Stable on ppc64 (bug #95327)

  25 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  samba-3.0.14a-r2.ebuild:
  Stable on sparc wrt #95327

*samba-3.0.14a-r2 (23 Jul 2005)

  23 Jul 2005; Christian Andreetta <satya@gentoo.org>
  +samba-3.0.14a-r2.ebuild: