@@ -1,7 +1,7 @@
 MD5 41299f246433a1a55c8fccc77ccd709e metadata.xml 491
-MD5 a0b88f6ef9fa46b67133841e31589c72 ChangeLog 33969
-MD5 68b3132a56538a90b245f3a2fc6d74bf samba-3.0.14a-r2.ebuild 9135
-MD5 7b05dc99e54f0b8f7ac5e128f2090f87 samba-3.0.10.ebuild 16844
+MD5 36dbf1e4298e0302eb8a5263893220e9 ChangeLog 34186
+MD5 7f64aae4db0d6d74498ecd0b53803b8f samba-3.0.10.ebuild 16771
+MD5 e3c94043767dc2111e0f2dcf0f854af3 samba-3.0.14a-r2.ebuild 9061
 MD5 fa1dcd2c95a81c22c2ad68de6698a85e files/digest-samba-3.0.10 206
 MD5 def157a63ec14450df82373617c7dc4b files/samba-3.0.11-gcc4.patch 485
 MD5 519576a9448b86f1a7baab18204533a5 files/lmhosts 126
