@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/samba-3.0.14a-r2.ebuild,v 1.9 2005/08/03 14:20:49 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/samba-3.0.14a-r2.ebuild,v 1.10 2005/08/05 17:21:54 seemant Exp $
 
 inherit eutils versionator
 
@@ -60,9 +60,6 @@ src_unpack() {
 }
 
 src_compile() {
-	# sandbox permissions
-	addpredict /etc/krb5.conf #bugs #95840 and #96453
-
 	ebegin "Running autoconf"
 		autoconf
 	eend $?
