@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/samba
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.191 2005/08/05 14:07:24 seemant Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.192 2005/08/05 17:21:54 seemant Exp $
+
+  05 Aug 2005; Seemant Kulleen <seemant@gentoo.org> samba-3.0.10.ebuild,
+  samba-3.0.14a-r2.ebuild:
+  removing the addpredic line -- the fault was with sandbox package itself,
+  which azarah has fixed earlier today.
 
   05 Aug 2005; Seemant Kulleen <seemant@gentoo.org>
   -samba-3.0.14a-r3.ebuild:
